syntax = "proto3";

option go_package = "ecdsa/presign";

/*
 * Represents a P2P message sent to each party during Round 1 of the ECDSA TSS presign protocol.
 */
message PresignRound1Message1 {
  bytes c = 1;
  repeated bytes range_proof_alice = 2;
}

/*
 * Represents a BROADCAST message sent to all parties during Round 1 of the ECDSA TSS presign protocol.
 */
 message PresignRound1Message2 {
  bytes commitment = 1;
}
